Bug #29 Fixed the import directory for HomeScreen and ProductScreen and added necessary dependencies and added eslintcache to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -467,3 +467,6 @@ TSWLatexianTemp*
 .ionide
 
 # End of https://www.toptal.com/developers/gitignore/api/visualstudiocode,tex,django,react
+
+# Custom
+.eslintcache
