--- a/.github/workflows/frontend_ci.yml
+++ b/.github/workflows/frontend_ci.yml
@@ -16,7 +16,7 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [14.x]
+        node-version: [10.x, 12.x, 14.x]
 
     steps:
     - uses: actions/checkout@v2
@@ -30,6 +30,10 @@ jobs:
     - name: Build
       run: npm run build --if-present
       working-directory: ./Code/frontend
+      env:
+         CI: false
     - name: Run tests
       run: npm test
       working-directory: ./Code/frontend
+      env:
+         CI: false
