Bug #39 Added Pillow as a dependency, removed unnecessary migration files and added them to gitignore.

--- a/.gitignore
+++ b/.gitignore
@@ -467,3 +467,11 @@ TSWLatexianTemp*
 .ionide
 
 # End of https://www.toptal.com/developers/gitignore/api/visualstudiocode,tex,django,react
+
+### static ###
+
+static/
+
+### migrations ###
+*/migrations/*
+!*/migrations/__init__.py
