--- a/.gitignore
+++ b/.gitignore
@@ -473,8 +473,8 @@ TSWLatexianTemp*
 static/
 
 ### migrations ###
-*/migrations/*
-!*/migrations/__init__.py
+**/migrations/*
+!**/migrations/__init__.py
 
 # Custom
 .eslintcache
